updates for off-season content

--- a/src/html/about/faq/index.jade
+++ b/src/html/about/faq/index.jade
@@ -34,7 +34,8 @@ block contents
         
         dl.FaqList
             dt When does festival take place?
-            dd The Inman Park Spring Festival always take place on the last weekend of April. This year it runs from #{globals.ipf.date.saturday.date} - #{globals.ipf.date.sunday.date}.
+            dd The Inman Park Spring Festival always take place on the last weekend of April. 
+            //- This year it runs from #{globals.ipf.date.saturday.date} - #{globals.ipf.date.sunday.date}.
             
             dt What are the hours?
             dd On Friday, the Tour of Homes runs from Noon until 4:00 p.m (there are no other Festival events on Friday.) On Saturday and Sunday the Tour of Homes runs from Noon until 6:00 p.m. On Saturday, Festival (excluding the Tour of Homes) begins at 11:00 a.m. and runs until 8:30 p.m. On Sunday, the times are 11:00 until 7:00 p.m.
@@ -63,12 +64,12 @@ block contents
             dt How can I become an exhibitor?
             dd Complete the application and form available on the <a href="/booths/become-an-exhibitor">Become an Exhibitor page</a>
 
-            dt When is the application deadline?
-            dd The deadline is March 10, 2017.
+            //- dt When is the application deadline?
+            //- dd The deadline is March 10, 2017.
 
             //- TODO Put the application dates into the global data
-            dt When will I find out if I have been accepted into the Market?
-            dd All applicants will be notified no later than March 17, 2017.
+            //- dt When will I find out if I have been accepted into the Market?
+            //- dd All applicants will be notified no later than March 17, 2017.
         
         
         h2 Events 
@@ -98,8 +99,8 @@ block contents
             dd Go to the <a href="/contact-us">Contact Us page</a> and send an e-mail request to Festival Sponsorships.
 
 
-        h2 Volunteer
-
-        dl.FaqList
-            dt Where do you sign up?
-            dd You can sign up online at <a href="#{globals.volunteerSite}">Signup.com</a>
+        //- h2 Volunteer
+        //- 
+        //- dl.FaqList
+        //-     dt Where do you sign up?
+        //-     dd You can sign up online at <a href="#{globals.volunteerSite}">Signup.com</a>
