--- a/src/html/booths/arts-crafts-market/index.jade
+++ b/src/html/booths/arts-crafts-market/index.jade
@@ -11,6 +11,8 @@ block contents
 
         h1 Arts & Crafts Market
         
-        //- p Vendors for this year's festival will be listed soon.
+        p Vendors listed below are from the previous Festival.
+        
+        //- p Festival #{globals.ipf.date.year} Street Market vendors will be listed below as soon as they are chosen.
 
         include _vendor-list.jade
