--- a/src/html/booths/street-market/index.jade
+++ b/src/html/booths/street-market/index.jade
@@ -12,6 +12,9 @@ block contents
         
         p Atlanta's largest Street Market offers more than 270 booths of antiques and handcrafted wares. You will find plenty of unique items &ndash; everything from handmade soap and unique plants to one-of-a-kind paintings and specialty jewelry.
 
-        //- p This year's Street Market vendors will be listed below as soon as they are chosen.
+        //- p Festival #{globals.ipf.date.year} Street Market vendors will be listed below as soon as they are chosen.
+        //- 
+        
+        p Vendors listed below are from the previous Festival.
         
         include _vendor-list.jade
