--- a/src/html/volunteer/index.jade
+++ b/src/html/volunteer/index.jade
@@ -26,13 +26,13 @@ block contents
 
     article.u-container
     
-        h1 Festival Thrives on Volunteers
-            
-        p 
-            | This festival runs on volunteers. To sign up to volunteer, please visit 
-            a(href=globals.volunteerSite) Signup.com
-            = ' '
-            | today to volunteer for this year's festival.
+        //- h1 Festival Thrives on Volunteers
+        //- 
+        //- p 
+        //-     | This festival runs on volunteers. To sign up to volunteer, please visit 
+        //-     a(href=globals.volunteerSite) Signup.com
+        //-     = ' '
+        //-     | today to volunteer for this year's festival.
         
         
         h2 Rules for All Volunteers
@@ -69,11 +69,7 @@ block contents
 
         p We love our beer volunteers and hope these procedures will make our beer trucks operate smoothly, while keeping our insurer and liquor license holder happy.
             
-        p 
-            | If you're ready to volunteer for festival,
-            = ' '
-            a(href=globals.volunteerSite) go to Signup.com now!
-        
-        
-          // this also works although cumbersome:
-        //- p This is a #[a(href="http://vols.pt/5WUsPh") link] and something.
+        //- p 
+        //-     | If you're ready to volunteer for festival,
+        //-     = ' '
+        //-     a(href=globals.volunteerSite) go to Signup.com now!
