--- a/src/html/booths/community-corner/index.jade
+++ b/src/html/booths/community-corner/index.jade
@@ -13,6 +13,9 @@ block contents
         
         //- p Non-profit organizations may request a space in the Community Corner which is separate from the main vendor area. Appropriate applicants (registered non-profits) are accepted based on availability on first come, first serve basis.
 
-        //- p Vendors for this year's festival will be listed soon.
+        //- p Festival #{globals.ipf.date.year} Street Market vendors will be listed below as soon as they are chosen.
+        //- 
+        
+        p Vendors listed below are from the previous Festival.
         
         include _vendor-list.jade
