--- a/src/html/booths/index.jade
+++ b/src/html/booths/index.jade
@@ -42,12 +42,12 @@ block contents
         
         h2 Become a Vendor
         
-        p 
-            | If you are interested in being a vendor for the #{globals.ipf.date.year} festival, 
-            = ' '
-            a(href="/booths/become-an-exhibitor") visit the Become an Exhibitor page for more info.
+        //- p 
+        //-     | If you are interested in being a vendor for the #{globals.ipf.date.year} festival, 
+        //-     = ' '
+        //-     a(href="/booths/become-an-exhibitor") visit the Become an Exhibitor page for more info.
         
-        //- p Vendor applications are closed in the off-season but you can check back on this site in the fall to find instructions on how to become a vendor. We use <a href="https://www.zapplication.org/" target="_blank">ZAPP</a> to manage vendor applications &ndash; feel free to visit their site to create an account at any time.
+        p Vendor applications are closed in the off-season but you can check back on this site in the fall to find instructions on how to become a vendor. We use <a href="https://www.zapplication.org/" target="_blank">ZAPP</a> to manage vendor applications &ndash; feel free to visit their site to create an account at any time.
 
         h2 2017 Arts &amp; Crafts Winners
 
