--- a/src/html/events/parade/index.jade
+++ b/src/html/events/parade/index.jade
@@ -24,7 +24,8 @@ block contents
     
     article.u-container
     
-        p Come see our Butterfly, Trash Monarch, Precision Attache Case Drill Team, and the <a href="http://seedandfeed.org/" target="_blank">Seed & Feed Marching Abominables</a> take to the street in the city's funkiest and most eclectic spring parade. This favorite of Festival begins at Edgewood and Euclid on Saturday #{globals.ipf.date.saturday.date} at #{globals.events.parade.time} (rain or shine) and runs to Austin Avenue at the foot of Little Five Points.
+        p Come see our Butterfly, Trash Monarch, Precision Attache Case Drill Team, and the <a href="http://seedandfeed.org/" target="_blank">Seed & Feed Marching Abominables</a> take to the street in the city's funkiest and most eclectic spring parade. 
+        //- This favorite of Festival begins at Edgewood and Euclid on Saturday #{globals.ipf.date.saturday.date} at #{globals.events.parade.time} (rain or shine) and runs to Austin Avenue at the foot of Little Five Points.
 
         p 
             | The AJC considers the parade one of 
@@ -33,10 +34,10 @@ block contents
 
         blockquote Take in a parade with personality. (Intown Atlanta) Inman Park Spring Festival's parade is a people watching paradise. Colorful costumes, creative themes, and the Seed & Feed Marching Abominable invite spring with sass and funk.
 
-        p 
-            a(href="#{globals.events.parade.application}") Download the Parade Application
-            = ' '
-            | if you'd like to register to march in the parade.
+        //- p 
+        //-     a(href="#{globals.events.parade.application}") Download the Parade Application
+        //-     = ' '
+        //-     | if you'd like to register to march in the parade.
 
 block scripts
     script.
