dropzone/file upload support - initial version

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -22,6 +22,7 @@
 @import 'components/banners';
 @import 'components/paypal';
 @import 'components/booths';
+@import 'components/dropzone';
 
 @import 'pages/sponsors';
 @import 'pages/faq';
