updates for vendor info and zapp url

--- a/src/html/index.jade
+++ b/src/html/index.jade
@@ -29,9 +29,6 @@ block contents
         //-             a.u-blockCentered.Button(href=globals.volunteerSite) Sign Up
 
         div
-            mixin slideImage('/assets/img/2018/sponsors/northside-banner', 'Presenting Sponsor: Northside Hospital')
-
-        div
             mixin slideImage('/assets/img/slideshows/parade-block-heros', 'Parade Block Heroes')
 
         div
@@ -77,17 +74,24 @@ block contents
     ul.PromotionGrid.u-container.u-container--noPad
         li.PromotionItem.alt-primary
             section
-                h3 Join Our Volunteer Team Today.
-                a.u-blockCentered.Button(href=globals.volunteerSite) Sign Up
-
+                h3 Vendor Applications Online
+                p
+                    a.u-blockCentered.Button(href="https://www.zapplication.org/event-info.php?ID=6787") Apply Now
+            
 
         li.PromotionItem
             section
-                h3 Tour of Homes
-                p
-                    a(href="/events/tour-of-homes") Review the homes that toured this past festival.
-            .ArrowNav
-                a(href="#") >
+                h3 Festival 2019 Art
+                p Look here soon for rules on submitting artwork for the coming Festival.
+            
+
+        //- li.PromotionItem
+        //-     section
+        //-         h3 Tour of Homes
+        //-         p
+        //-             a(href="/events/tour-of-homes") Review the homes that toured this past festival.
+        //-     .ArrowNav
+        //-         a(href="#") >
 
         //- Buy Tour Tickets Now
         //-
