--- a/src/assets/css/pages/_art-submission.scss
+++ b/src/assets/css/pages/_art-submission.scss
@@ -34,3 +34,16 @@
 .ArtForm-error {
     color: red;
 }
+
+.SubmissionLoader {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(255,255,255,0.5);
+    z-index: 9999;
+    padding-top: 40%;
+    text-align: center;
+}
