update to submissions page text; new northside hospital logos

--- a/src/html/art/submissions/index.jade
+++ b/src/html/art/submissions/index.jade
@@ -15,11 +15,12 @@ block contents
 
         h2 Submission Deadline: Dec 31, 2018
 
-        p The design will need to be able to be displayed on all Festival Content:
+        p The design will need to be able to be reproduced in a variety of methods and sizes on all Festival Content:
 
         ul
-            li T-shirt and Poster (do we have dimensions for this) 
-            li Tour of Homes Ticket Cover  (do we have the dimensions for this?)
+            li T-shirt (screen printed onto a t-shirt for children and adults S-XXL) 
+            li Poster (digitally printed - approximately 18" W x 24" H - this size may change)
+            li Tour of Homes Ticket Cover  (digitally printed - ticket size is 4.25" W x 11" H)
             li Advertising, promotions, and social media 
 
         h2 Prize Package for the Winning Design
