--- a/src/html/index.jade
+++ b/src/html/index.jade
@@ -82,7 +82,9 @@ block contents
         li.PromotionItem
             section
                 h3 Festival 2019 Art
-                p Look here soon for rules on submitting artwork for the coming Festival.
+                p Call for entries is live! Learn how to submit your artwork for this year's design competition.
+                p
+                    a(href="/art/submissions") Learn More
             
 
         //- li.PromotionItem
