--- a/src/html/events/dance/index.jade
+++ b/src/html/events/dance/index.jade
@@ -1,7 +1,7 @@
 extends ../../templates/layout.jade
 
 block title
-    title #{globals.ipf.title} | Events | Dane
+    title #{globals.ipf.title} | Events | Dance
 
 block contents
 
