--- a/src/html/index.jade
+++ b/src/html/index.jade
@@ -8,11 +8,12 @@ block title
 
 block contents
 
-    //- div.Banner-dates
-    //-     div #{globals.ipf.date.year} Tour of Homes Preview: Friday #{globals.ipf.date.friday.date}
-    //-     div Festival: Saturday #{globals.ipf.date.saturday.date} &amp; Sunday #{globals.ipf.date.sunday.date}
+    div.Banner-dates
+        div #{globals.ipf.date.year} Tour of Homes Preview: Friday #{globals.ipf.date.friday.date}
+        div Festival: Saturday #{globals.ipf.date.saturday.date} &amp; Sunday #{globals.ipf.date.sunday.date}
 
     .Hero.owl-carousel.owl-theme
+        // festival volunteer promo slide
         //- div
         //-     .HeroSlidePromo
         //-         .HeroSlidePromo-banner
@@ -27,6 +28,18 @@ block contents
         //-                 | to volunteer your time and help make this year's festival great!
         //- 
         //-             a.u-blockCentered.Button(href=globals.volunteerSite) Sign Up
+
+        // festival art submission slide
+        div
+            .HeroSlidePromo
+                .HeroSlidePromo-banner
+        
+                .HeroSlidePromo-copy
+                    h3 Call For Entries!
+                    p <a href="/art/submissions">Submit your artwork</a> for this year's festival. Be part of an in-town tradition and put your talent on display for the Inman Park Festival attendees. 
+        
+                    a.u-blockCentered.Button(href="/art/submissions") Learn More
+
 
         div
             mixin slideImage('/assets/img/slideshows/parade-block-heros', 'Parade Block Heroes')
@@ -61,7 +74,8 @@ block contents
         .PromotionItemHero-text
             section
                 h2 Off Season
-                p Next year's Festival details will be available online later this year.
+                //- p Next year's Festival details will be available online later this year.
+                p Look for this year's Festival updates in the forthcoming months.
                 
         //- .PromotionItemHero-text
         //-     section
