--- a/src/html/volunteer/index.jade
+++ b/src/html/volunteer/index.jade
@@ -8,26 +8,26 @@ block title
 
 block contents
 
-    .Hero
-        div
-            .HeroSlidePromo
-                .HeroSlidePromo-banner
-
-                .HeroSlidePromo-copy
-                    h3 Festival Needs Volunteers!
-                    p
-                        | Festival doesn't happen without volunteers.
-                        = ' '
-                        a(href=globals.volunteerSite) Signup now
-                        = ' '
-                        | to volunteer your time and help make this year's festival great!
-                    
-                    a.u-blockCentered.Button(href=globals.volunteerSite) Sign Up
+    //- .Hero
+    //-     div
+    //-         .HeroSlidePromo
+    //-             .HeroSlidePromo-banner
+    //- 
+    //-             .HeroSlidePromo-copy
+    //-                 h3 Festival Needs Volunteers!
+    //-                 p
+    //-                     | Festival doesn't happen without volunteers.
+    //-                     = ' '
+    //-                     a(href=globals.volunteerSite) Signup now
+    //-                     = ' '
+    //-                     | to volunteer your time and help make this year's festival great!
+    //- 
+    //-                 a.u-blockCentered.Button(href=globals.volunteerSite) Sign Up
 
     article.u-container
     
-        //- h1 Festival Thrives on Volunteers
-        //- 
+        h1 Festival Thrives on Volunteers
+        p This festival runs on volunteers. Check back in the coming months for a link to volunteer for this year's festival.
         //- p 
         //-     | This festival runs on volunteers. To sign up to volunteer, please visit 
         //-     a(href=globals.volunteerSite) Signup.com
