--- a/src/html/about/index.jade
+++ b/src/html/about/index.jade
@@ -4,7 +4,7 @@ block pageVars
     - var selectedNav = 'about'
 
 block title
-    title About the #{globals.ipf.title}
+    title #{globals.ipf.title} | About the #{globals.ipf.title}
 
 block contents
 
