updated art for submission promo slide

--- a/src/html/index.jade
+++ b/src/html/index.jade
@@ -142,10 +142,11 @@ block scripts
     script.
         var ipf = {};
         ipf.page = 'index';
+        
         $('.owl-carousel').owlCarousel({
             dots: true,
             loop: true,
-            autoplay: true,
+            autoplay: false,
             responsive: {
                 0: {
                     items: 1
