--- a/src/html/index.jade
+++ b/src/html/index.jade
@@ -146,7 +146,7 @@ block scripts
         $('.owl-carousel').owlCarousel({
             dots: true,
             loop: true,
-            autoplay: false,
+            autoplay: true,
             responsive: {
                 0: {
                     items: 1
