--- a/src/assets/css/components/_banners.scss
+++ b/src/assets/css/components/_banners.scss
@@ -15,4 +15,9 @@
             }
         }
     }
+
+    @media (min-width: $bp-lg) {
+        padding: 0.75em;
+        font-size: 1.15em;
+    }
 }
