added banner to about page, added kids zone text to about page

--- a/src/html/about/index.jade
+++ b/src/html/about/index.jade
@@ -8,6 +8,10 @@ block title
 
 block contents
 
+    div.Banner-dates
+        div #{globals.ipf.date.year} Tour of Homes Preview: Friday #{globals.ipf.date.friday.date}
+        div Festival: Saturday #{globals.ipf.date.saturday.date} &amp; Sunday #{globals.ipf.date.sunday.date}
+
     article.u-container
 
         h1 About the Inman Park Festival
@@ -75,8 +79,12 @@ block contents
         h3 Dance Festival
         
         p Every year The Trolley Barn hosts a program of classical and contemporary dance. Check out <a href="/events/dance">the dance page</a> to learn more about the dance program. 
+
+
+        h3 Kids' Zone
         
-        
+        p Festival provides a dedicated space for kids to play that includes slides, obstacles courses, crafts, a great playground, riding toys for our youngest guests and other surprises, all of them FREE! Check the <a href="/events/kidszone">Kids' Zone page</a> for more details.
+
         h3 Arts & Crafts Show and Street Market
         
         p Browse many booths on the tree-shaded streets of Inman Park from 11AM to 6PM Saturday and Sunday during festival. The <a href="/booths/arts-crafts-market">Arts & Crafts Market</a> is a juried selection of more than 150 artists showcasing their work in a variety of media including sculpture, painting and photography. The <a href="/booths/street-market">Street Market</a> includes more than 250 booths of vendors selling antiques, handcrafted wares, clothing and a large variety of other items.
