--- a/src/html/art/index.jade
+++ b/src/html/art/index.jade
@@ -16,16 +16,18 @@ block contents
                 h2 Submit Your Artwork for This Year's Festival
                 p Are you a local artist in interested in submitting artwork to be used for this year's festival posters and t-shirts? If so, checkout our <a href="submissions">Submissions Page</a>.
         
-        h2 This Year's Winner
-        
-        p 
-            | Read about this year's winner 
-            = ' '
-            a(href="/art/2018") here.
+        //- h2 This Year's Winner
+        //- 
+        //- p 
+        //-     | Read about this year's winner 
+        //-     = ' '
+        //-     a(href="/art/2019") here.
         
         h2 Previous Winners
         
         ul
+            li
+                a(href="/art/2018") 2018 - Cooper Pierce
             li
                 a(href="/art/2017") 2017 - Ming Phan
 
