--- a/src/html/index.jade
+++ b/src/html/index.jade
@@ -70,13 +70,19 @@ block contents
 
     .PromotionItemHero.u-container.u-container--noPad
         .PromotionItemHero-image.image--art-2018
-        
+
         .PromotionItemHero-text
             section
-                h2 Off Season
-                //- p Next year's Festival details will be available online later this year.
-                p Look for this year's Festival updates in the forthcoming months.
+                h2 Getting Ready
                 
+                p Festival planning is well-underway. Look here soon for Volunteer signup and other announcements as we get closer to this year's festival.
+        
+        //- .PromotionItemHero-text
+        //-     section
+        //-         h2 Off Season
+        //-         //- p Next year's Festival details will be available online later this year.
+        //-         p Look for this year's Festival updates in the forthcoming months.
+
         //- .PromotionItemHero-text
         //-     section
         //-         h2 Tour Tickets on Sale
